Start upgrade to Graal and Java 25